# QT-PCL-Volume-Estimation

./: CMakeLists.txt  README.md  tetingCode.txt
include/: VolumeEstimation.cpp  VolumeEstimation.h  function.cpp  ui_VolumeEstimation.h
src/: MyIO.h  Slice.h  VolumeEstimation.ui  main.cpp  pcapViewer.ui  pcapviewer.cpp  pcapviewer.h  pclviewer.cpp  pclviewer.h
test/: 111cylinder.ply  20cylinder.ply  Matlab3DVolumeEstimation.asv  Matlab3DVolumeEstimation.m  abandom.m  cube lot point.ply  sphere2x2.ply
